--- a/整体框架.md
+++ b/整体框架.md
@@ -2,7 +2,8 @@
 
 ### 项目综述
 我们将设计一个体系，在这个体系中，输入为用户的需求，输出是我们给出的资产推荐，（并在后续根据市场表现实时调整），中间采用APT多因子定价模型。由于需要对采用的因子进行评价，所以需要用时间序列模型来做回归和预测。在此有打量的数据分析，并涉及到机器学习。
-<\hr>
+
+<hr>
 
 ### 一、上层配置：
 根据用户的收益目标，风险容忍等信息推出用户可投资资产类，和这些资产的大概的预期收益和预期风险。进一步得出用户的长期战略配置，短期战术配置，深度的机会。
@@ -16,21 +17,21 @@
 股票 国债 信用债 （高，低级） 大宗商品 对冲策略 不动产 基建 其他（特殊策略） 
 等等可投资产的因子拆解和非因子识别。
 任务如下：
-1.根据上层配置中选择的可投资产 进行 因子的拆解和 非因子识别。
-2.根据这些因子和非因子对资产的影响计算出最优的资产配置策略（各资产比例）
+1.  根据上层配置中选择的可投资产 进行 因子的拆解和 非因子识别。
+2. 根据这些因子和非因子对资产的影响计算出最优的资产配置策略（各资产比例）
 ### 三、底层配置：
 穿透性分拆 子资产面的因子和收益来源，穿透性组合因子构建配置和分配风险
 任务：
-1.对中层配置中的因子进行进一步的分拆，找出更底层的因子。
-2.找出各资产的收益来源进行分拆，找出因子
-3.根据这些底层的因子进行配置和构建风险
+1. 对中层配置中的因子进行进一步的分拆，找出更底层的因子。
+2. 找出各资产的收益来源进行分拆，找出因子
+3. 根据这些底层的因子进行配置和构建风险
 ### 四、战术调整：
 根据战术配置调整的管理理念
  进行评估，设置需要调整的标准，达到标准时，进行调整
 任务：
-1.对市场的基本面，资本面，市场情绪面，其他（大小盘回测）等进行实时监控
-2.根据具体情况制定是否需要调整的标准，再根据监测到的信息进行判断是否需要调整
-3.根据具体的检测结果进行
+1. 对市场的基本面，资本面，市场情绪面，其他（大小盘回测）等进行实时监控
+2. 根据具体情况制定是否需要调整的标准，再根据监测到的信息进行判断是否需要调整
+3. 根据具体的检测结果进行
 系统性（量化为主）收割风险溢价
 控制上层资产面市场风险
 垂直调整组合因子配置和风险
@@ -40,5 +41,10 @@
 等方面的调整。
 
 ### 总结：
-实现的要点：1.解决老师ppt中提到的现在缺的方面。2. Market Portfolio和Portfolio+结合，进行更全面的资产配置。3.注重底层配置，对因子进行尽量底层的分解，直接用因子来构建配置和分配风险4.根据用户的信息，给出包括上层，中层，底层配置和调整情况的完整的资产配置方案。5.实时对模型根据市场变化进行调整，保证结果的有效性
+实现的要点：
+1. 解决老师ppt中提到的现在缺的方面。
+2.  Market Portfolio和Portfolio+结合，进行更全面的资产配置。
+3. 注重底层配置，对因子进行尽量底层的分解，直接用因子来构建配置和分配风险
+4. 根据用户的信息，给出包括上层，中层，底层配置和调整情况的完整的资产配置方案。
+5. 实时对模型根据市场变化进行调整，保证结果的有效性
 
