--- a/整体框架.md
+++ b/整体框架.md
@@ -40,6 +40,31 @@
 量化 + 人工操作
 等方面的调整。
 
+### 疑点难点
+1. market portfolio与portfolio
+2. 
+
+### 以上综述
+资产配置：
+自上而下的战略配置，自下而上的反馈
+ 
+将自上而下的战略配置划分为上中下三层。
+上层为对资产配置的宏观分析，包括从资本端分析客户预期和风险容忍能力，从资产端分析资产投资的风险及收益，和对资产配置的总体情况作一个全面的分析，对于这一问题，我们可能遇到全市场资产扫描不足及可投资产专家库不足这样的问题。
+中层包括Market Portfolio 和 Portfolio+两个方面，前者为内部直接管理而后者以外部委托管理为主，具体来看，Market Portfolio由于是受到内部直接管理，有强掌控力，它建立在各类指数的基础上，根据需求配置不同的因子，从而实现对资产配置的灵活调整，但是资产配置的经验常常是缺乏的，Portfolio是内部能力的扩展，它在于寻找伙伴和双赢，在于双向对话，能带来前者没有的收益来源；
+底层是对不同投资资产的因子的分析，分析诸如股票，股权，债券这些资产的影响因子，为逐步实现中层配置和上层配置提供量化条件，关于这一方向的研究还处于起步阶段。
+在进行资产配置的过程中需要适时作出战略调整，对于配置的调整应考虑估值、趋势/行为偏差和市场情绪/周期三个方面，分别占比50%,25%和25%。
+ 
+为实现以上目标，需进行以下方面的分析：
+1. 基本面：货币利率，工业增速，固定投资，市场流动性等宏观基本面和公司的盈利能力等公司基本面。
+2. 资金面：交易量，再融资金额（具体指对融资渠道的分析），限售股解禁数量等股票市场外部资金和政府政策（IPO政策）
+3. 市场情绪面：波动率，市场多空情绪（包括涨跌停数量，RSI，IVIX等方面），避险资产的价格和交易量变化。
+
+一些方法：
+检测大小盘的相对业绩，相对业绩指标（ROE，净利润同比），数据有效性、一致性测试
+涨跌幅择时逻辑、RSI择时逻辑等等。
+ 
+ </hr>
+
 ### 总结：
 实现的要点：
 1. 解决老师ppt中提到的现在缺的方面。
