--- a/整体框架.md
+++ b/整体框架.md
@@ -26,7 +26,8 @@
 2. 找出各资产的收益来源进行分拆，找出因子
 3. 根据这些底层的因子进行配置和构建风险
 ### 四、战术调整：
-![战术调整]()
+![战术调整](/Open/1.png)
+
 根据战术配置调整的管理理念
  进行评估，设置需要调整的标准，达到标准时，进行调整
 任务：
