--- a/整体框架.md
+++ b/整体框架.md
@@ -27,7 +27,7 @@
 3. 根据这些底层的因子进行配置和构建风险
 ### 四、战术调整：
 
-![战术调整](Open/1.png)
+![1](/Open/1.png)
 
 根据战术配置调整的管理理念
  进行评估，设置需要调整的标准，达到标准时，进行调整
@@ -66,7 +66,6 @@
 检测大小盘的相对业绩，相对业绩指标（ROE，净利润同比），数据有效性、一致性测试
 涨跌幅择时逻辑、RSI择时逻辑等等。
  
- <\hr>
 
 ### 总结：
 实现的要点：
