--- a/整体框架.md
+++ b/整体框架.md
@@ -1,7 +1,7 @@
 ## 资产配置思路框架：
 
 ### 项目综述
-我们将设计一个体系，在这个体系中，输入为用户的需求，输出是我们给出的资产推荐，（并在后续根据市场表现实时调整），中间采用APT多因子定价模型。由于需要对采用的因子进行评价，所以需要用时间序列模型来做回归和预测。在此有打量的数据分析，并涉及到机器学习。
+我们将设计一个体系，在这个体系中，输入为用户的需求，输出是我们给出的资产推荐，（并在后续根据市场表现实时调整），中间采用APT多因子定价模型。由于需要对采用的因子进行评价，所以需要用时间序列模型来做回归和预测。在此有大量的数据分析，并涉及到机器学习。
 
 <hr>
 
