--- a/整体框架.md
+++ b/整体框架.md
@@ -4,8 +4,8 @@
 **我们将设计一个体系，在这个体系中，输入为用户的需求，输出是我们给出的资产推荐，（并在后续根据市场表现实时调整），中间采用APT多因子定价模型。由于需要对采用的因子进行评价，所以需要用时间序列模型来做回归和预测。在此有大量的数据分析，并涉及到机器学习。**
 
 ### 存在问题
-1. 首先当中挑选多因子，是一个怎么样的过程？我的理解是这样的：比方说，我整个市场里面有一百个因子，然后我们从中挑3个，然后在验证这个回归模型是否很好地实现了我们的目标。但是没有目的地去挑选的话，那就有\binom{n+1}{2k}种选法，这个任务量太大了，请问我们挑选因子是有什么有效的模式的吗？
-2. 其次，我们在做多因子回归分析的时候，考虑的应该除了r还有\sigma吧？假如有其他的用户的需求，我们还是需要再假如其他的被预测的元素的吧？
+1. 首先当中挑选多因子，是一个怎么样的过程？我的理解是这样的：比方说，我整个市场里面有一百个因子，然后我们从中挑3个，然后在验证这个回归模型是否很好地实现了我们的目标。但是没有目的地去挑选的话，那就有$\binom{n+1}{2k}$种选法，这个任务量太大了，请问我们挑选因子是有什么有效的模式的吗？
+2. 其次，我们在做多因子回归分析的时候，考虑的应该除了$r$还有$\sigma$吧？假如有其他的用户的需求，我们还是需要再假如其他的被预测的元素的吧？
 <hr>
 
 ### 一、上层配置：
