--- a/整体框架.md
+++ b/整体框架.md
@@ -6,6 +6,8 @@
 ### 存在问题
 1. 首先当中挑选多因子，是一个怎么样的过程？我的理解是这样的：比方说，我整个市场里面有一百个因子，然后我们从中挑3个，然后在验证这个回归模型是否很好地实现了我们的目标。但是没有目的地去挑选的话，那就有$\binom{n+1}{2k}$种选法，这个任务量太大了，请问我们挑选因子是有什么有效的模式的吗？
 2. 其次，我们在做多因子回归分析的时候，考虑的应该除了$r$还有$\sigma$吧？假如有其他的用户的需求，我们还是需要再假如其他的被预测的元素的吧？
+
+$$\sum_{i=0}N\int_{a}{b}g(t,i)\text{d}t$$
 <hr>
 
 ### 一、上层配置：
