--- a/整体框架.md
+++ b/整体框架.md
@@ -5,11 +5,11 @@
 
 ### 存在问题
 1. 首先当中挑选多因子，是一个怎么样的过程？我的理解是这样的：比方说，我整个市场里面有一百个因子，然后我们从中挑3个，然后在验证这个回归模型是否很好地实现了我们的目标。但是没有目的地去挑选的话，那就有<a href="https://www.codecogs.com/eqnedit.php?latex=\binom{100}{3}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\binom{100}{3}" title="\binom{100}{3}" /></a>种选法，这个任务量太大了，请问我们挑选因子是有什么有效的模式的吗？
-h<sub>&theta;</sub>(x) = &theta;<sub>o</sub> x + &theta;<sub>1</sub>x
-2. 其次，我们在做多因子回归分析的时候，考虑的应该除了&r;还有&sigma;吧？假如有其他的用户的需求，我们还是需要再假如其他的被预测的元素的吧？
+2. 其次，我们在做多因子回归分析的时候，考虑的应该除了r还有&sigma;吧？假如有其他的用户的需求，我们还是需要再假如其他的被预测的元素的吧？
 
-$$\sum_{i=0}N\int_{a}{b}g(t,i)\text{d}t$$
 <hr>
+
+>以下是关于项目的介绍（for the convenience of the team's member）
 
 ### 一、上层配置：
 根据用户的收益目标，风险容忍等信息推出用户可投资资产类，和这些资产的大概的预期收益和预期风险。进一步得出用户的长期战略配置，短期战术配置，深度的机会。
