--- a/整体框架.md
+++ b/整体框架.md
@@ -9,7 +9,7 @@
 
 <hr>
 
->以下是关于项目的介绍（for the convenience of the team's member）
+>以下是关于项目的介绍（for the convenience of the team's members）
 
 ### 一、上层配置：
 根据用户的收益目标，风险容忍等信息推出用户可投资资产类，和这些资产的大概的预期收益和预期风险。进一步得出用户的长期战略配置，短期战术配置，深度的机会。
